--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
         </p>
       </div>
 
-      <nav>
+      <div>
         <h3>Follow</h3>
         <p>
           <a href="#" target="_blank">Youtube</a><br>
           <a href="#" target="_blank">Facebook</a><br>
           <a href="#" target="_blank">Twitter</a>
         </p>
-      </nav>
+      </div>
     </section>
   </body>
 </html>
