--- a/index.html
+++ b/index.html
@@ -29,32 +29,32 @@
 
     
     <section id="details">
-      <div>
+      <!--<div>-->
         <h3>Contact</h3>
         <p>
           <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
           +1 710 555 1234<br>
           @fakeRealty
         </p>
-      </div>
+      <!--</div>-->
       
-      <div>
+      <!--<div>-->
         <h3>Correspondence</h3>
         <p>
           Exceptional Realty<br>
           P.O.Box 5555<br>
           Brooklyn, NY 11201
         </p>
-      </div>
+      <!--</div>-->
 
-      <div>
+      <!--<div>-->
         <h3>Links</h3>
         <p>
           <a href="#" target="_blank">Home Restoration</a><br>
           <a href="#" target="_blank">Afordable Mortgages</a><br>
           <a href="#" target="_blank">Professional Moving Crew</a>
         </p>
-      </div>
+      <!--</div>-->
 
       <div>
         <h3>Follow</h3>
