--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
         </p>
       <!--</div>-->
 
-      <div>
+      <!--<div>-->
         <h3>Follow</h3>
         <p>
           <a href="#" target="_blank">Youtube</a><br>
           <a href="#" target="_blank">Facebook</a><br>
           <a href="#" target="_blank">Twitter</a>
         </p>
-      </div>
+      <!--</div>-->
     </section>
   </body>
 </html>
