Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </figure>
     </section>
 
-    
+    <nav>
     <section id="details">
       <div>
         <h3>Contact</h3>
@@ -65,5 +65,6 @@
         </p>
       </div>
     </section>
+    </nav>
   </body>
 </html>
